src/test/egern/success/function_call_expression.egern
func test() {
    return 4;
}
var a = test();
print(a);
