src/test/egern/fail/redeclaring_parameter_as_function_fail.egern
func hello(test: int): void {
    print(test);
    func test(a: int): int {
        return a * a;
    }
    print(test(4));
}
print(hello(3));
